--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,14 @@
 			"css": ["price_highlight.css"],
 			"js": ["jquery-3.2.1.min.js","typeahead.bundle.min.js","PriceHandler.js"]
 		}
-	]
+	],
+	
+	"background" : {
+		"scripts": ["api_handler.js"]
+	},
+	
+	"externally_connectable": {
+		"ids": ["*"]
+	}
 	
 }
