--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,8 @@
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-			"css": ["price_highlight.css"],
-			"js": ["jquery-3.2.1.min.js","typeahead.bundle.min.js","PriceHandler.js"]
+			"css": ["tooltipster.bundle.min.css", "tooltipster-light.min.css", "price_highlight.css"],
+			"js": ["jquery-3.2.1.min.js","typeahead.bundle.min.js", "tooltipster.bundle.min.js","PriceHandler.js"]
 		}
 	],
 	
